  Bugfixes:
    - Train platforms now collide with most objects, greatly reducing the manual collision handling
    - Trains weren't consuming the correct amount of power
---------------------------------------------------------------------------------------------------
Version: 0.3.0
Date: 2020.11.24
  Changes:
    - Upgraded to Factorio 1.1
    - Many GUI elements have been moved from gui.left to gui.relative
  Bugfixes:
    - Mining a self-driving car now cleans up the rendered path
---------------------------------------------------------------------------------------------------
Version: 0.3.1
Date: 2020.11.25
  Changes:
    - Tips and tricks have been tweaked to at least work with Satisfactorio buildings
    - Main menu scenes have been added
---------------------------------------------------------------------------------------------------
Version: 0.3.2
Date: 2020.11.29
  Gui:
    - Improved the integration of various GUI elements
  Bugfixes:
    - Fixed that mining a lookout tower while you were in it would result in the range buff sticking
    - Fixed that mining a harvested plant would crash the game a few hours later
    - Fixed that dying in a car would leave the self-driving GUI open, leading to a crash
---------------------------------------------------------------------------------------------------
Version: 0.3.3
Date: 2020.11.30
  Features:
    - Inventory trash slot, which can be used to discard any items cluttering your inventory.
    - Sort button added to various storage containers and cars.
---------------------------------------------------------------------------------------------------
Version: 0.3.4
Date: 2020.12.??
  Balancing:
    - Increase spawn rate of Geyser
  Bugfixes:
    - Reworked electric-energy-interface entities to make better use of the system, notably for tooltips.
    - Added Fuse Box to Geothermal Generator
  Changes:
    - No longer compatible with Construction Drones, use Companion Drones instead.