@@ -1005,6 +1005,7 @@ self-driving-recording-finished=Recording successful. Autopilot is ready.
 self-driving-recording-disable-autopilot=[color=red]Turn off the autopilot to record a new path.[/color]
 self-driving-recording-aborted=[color=red]Left the vehicle. Recording cancelled.[/color]
 self-driving-recording-must-close=[color=red]Recording must end inside the starting circle.[/color]
+belt-no-naked-merging=Cannot merge conveyors without __ITEM__conveyor-merger__.
 hyper-tube-no-junction=Hyper tubes cannot have junctions.
 parachute-no-cliff=There is no Cliff in front of you.
 jetpack-no-fuel=The __ITEM__jetpack__ requires 2× __ITEM__packaged-fuel__ to fly.
